# northgard-assistant

./: README.md
buildmaker/: .gitignore  clan_lores.json  compile.bat  example.json  main.py
buildmaker/saved/: Rat.json
na-launcher/: package.json
na-launcher/src/: app.css  app.html
na-launcher/src-tauri/: Cargo.toml  tauri.conf.json
na-launcher/src-tauri/icons/: icon.icns
na-launcher/src-tauri/src/: lib.rs  main.rs
na-launcher/src/lib/: ProcessAttacher.svelte
na-launcher/src/routes/: +page.svelte
nas/: Cargo.toml
nas/src/: lib.rs  main_window.rs
nas/src/commands/: aob_injection.rs  auto_accept.rs  auto_lockin.rs  base.rs  build_guide.rs  game_common.rs  general.rs  hashlink.rs  lobby_members.rs  lore_hook.rs  mem_alloc.rs  mod.rs
nas/src/core/: building_window.rs  lore_window.rs  mod.rs  warband_window.rs
nas/src/modules/: aob_injection.rs  auto_accept.rs  auto_lockin.rs  base.rs  basic.rs  callback_system.rs  game_common.rs  hashlink.rs  leaderboard_scores.rs  libmem_injection.rs  lobby_members.rs  lore_hook.rs  mem_alloc.rs  mod.rs  winrate_store.rs  winrate_tracker.rs
nas/src/utils/: libmem_ex.rs  memory.rs  mod.rs  signals.rs
