[package]
name = "nas"
version = "0.1.3"
edition = "2021"

[lib]
name = "nas"
crate-type = ["cdylib"]

[dependencies]
axum = "0.7.9"
hlbc = "0.7.0"
hlbc-decompiler = "0.7.0"
hudhook = "0.8.0"
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
image = "0.25.5"
imgui = "0.12.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
once_cell = "1"
windows = { version = "0.58.0", features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus"
]}
dirs = "6.0.0"
libmem = { version = "5.1.0", features = ["static"] }
